[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
dotenvy = "0.15.7"
reqwest = { version = "0.13.3", features = ["json", "multipart", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs", "set-header"] }
uuid = { version = "1.23.1", features = ["v4"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
anyhow = "1.0.102"
urlencoding = "2.1.3"
oauth2 = "5.0.0"
sha2 = "0.11.0"
hex = "0.4"
once_cell = "1.13.0"
securestore = { version = "0.100.3", default-features = false, features = [
    "rustls",
] }
